# Al-Anime-Recommender-System-using-Grafana-Cloud-Minikube-ChromaDB-Langchain-GCP

./: .dockerignore  .gitignore  README.md  main.py  pyproject.toml
app/: streamlit_app.py
chroma_db/: chroma.sqlite3
docker/: .dockerignore  Dockerfile
src/recommender_system/: data_loader.py  prompt_template.py  recommender.py  vector_store.py
src/recommender_system/api/: fastapi_app.py  models.py
src/recommender_system/api/routes/: __init__.py  health.py  recommendations.py
src/recommender_system/config/: settings.py
src/recommender_system/pipeline/: build_embedding_pipeline.py  recommend_pipeline.py
src/recommender_system/utils/: custom_exception.py  logger.py
